# shai-hulud-detect-rs

./: Cargo.toml  FIXES_COMPLETE.md  FUNCTION_COMPARISON.md  PATTERN_RISK_VERIFICATION.md  README.md  TEST_SUMMARY.md  rust_output.txt
rs/: .gitignore  Cargo.toml  bash_scan_normal.txt
rs/rs/tests/gold/: bash_gold_normal.json  bash_gold_paranoid.json  bash_parsed_paranoid.json  bash_scan_normal.txt  bash_scan_paranoid.txt  compare_normal.json  rust_detailed_normal.json  rust_scan_normal.json  rust_scan_paranoid.json  scan_result_normal.json  scan_result_paranoid.json
rs/src/: lib.rs  main.rs
rs/tests/gold/: .gitignore
rs/tools/: compare_reports.py
src/: compat.rs  lib.rs  main.rs  semver.rs
tests/: integration_gold_parity.rs
