[package]
name = "shai_hulud_detector"
version = "0.1.0"
edition = "2021"

[lib]
name = "shai_hulud_detector"
path = "src/lib.rs"

[[bin]]
name = "shai-hulud-detector"
path = "src/main.rs"

[dependencies]
walkdir = "2"
sha2 = "0.10"
regex = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
anyhow = "1.0"
rayon = "1.7"
clap = { version = "4", features = ["derive"] }
hex = "0.4"
num_cpus = "1.17"
tempfile = "3"
lazy_static = "1.4"

[dev-dependencies]
assert_matches = "1.5"
